Fix wrong colored name in gallery modal

--- a/darkmode.scss
+++ b/darkmode.scss
@@ -1068,6 +1068,12 @@
   .PermalinkProfile-background {
     z-index: 1;
   }
+
+  .GalleryTweet a.with-icn:not(:hover) .Icon,
+  .GalleryTweet .account-group .fullname,
+  .GalleryTweet .account-group:hover .fullname {
+    color: #f5f8fa;
+  }
 }
 
 // end @moz-document url-prefix
